# rust-final-project

./: .gitignore
preprocessing-system/: Cargo.toml
real-time-system/: Cargo.toml
real-time-system/src/: config.rs  main.rs  models.rs
real-time-system/src/cache/: loader.rs  memory.rs  mod.rs
real-time-system/src/factorization/: mod.rs  optimized.rs  simple.rs
real-time-system/src/load_balancer/: mod.rs
real-time-system/src/web/: handlers.rs  mod.rs  routes.rs
