[package]
name = "preprocessing-system"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
primal = "0.3"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"